tests/baselines/reference/null.errors.txt
null.ts(2,9): error TS18047: 'x' is possibly 'null'.
null.ts(3,9): error TS18050: The value 'null' cannot be used here.


==== null.ts (2 errors) ====
    var x=null; 
    var y=3+x;  
            ~
!!! error TS18047: 'x' is possibly 'null'.
    var z=3+null; 
            ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    class C {
    }
    function f() {
        return null;
        return new C();
    }
    function g() {
        return null;
        return 3;
    }
    interface I {
        x:any;
        y:number;
    }
    var w:I={x:null,y:3};
    
    
    